--- a/04_casos.tex
+++ b/04_casos.tex
@@ -40,7 +40,7 @@ Finalmente se incluye una breve conclusión respecto a la utilidad de la aplicac
 		\label{fig:heatmap-timelapse}
 	\end{figure}	
 	
-	Durante el primer minuto posterior a la publicación del primer \textit{tweet} se publicaron 36 otros mensajes (sin contar \textit{retweets}). Además, luego de los primeros reportes, que generalmente son cortos y sin mucho detalle, se comienzan a compartir otros mensajes con información respecto a la intensidad del mismo. Mensajes cómo los presentados a continuación, ayudan a quien los lee, a entender que el sismo se percibió con una alta intensidad. 
+	Durante el primer minuto posterior a la publicación del primer \textit{tweet} se publicaron 36 otros mensajes (sin contar \textit{retweets}). Además, luego de los primeros reportes, que generalmente son cortos y sin mucho detalle, se comienzan a compartir otros mensajes con información respecto a la intensidad del mismo. Mensajes como los presentados a continuación, ayudan a quien los lee, a entender que el sismo se percibió con una alta intensidad. 
 	
 
 \textit{``Hace mucho no sentía un temblor así'' $@$Estrella\_WTF, 14:26:00, 25/12/16}
@@ -58,7 +58,7 @@ Finalmente se incluye una breve conclusión respecto a la utilidad de la aplicac
 		\label{fig:25dic-hipocentro}
 	\end{figure}
 	
-	La geolocalización de \textit{tweets} permitió presentar visualmente la zona en la cual las personas eran capaces de percibir movimiento. Las figuras \ref{fig:heatmap-timelapse} presentan la variación de las visualizaciones geográficas durante los primeros 5 minutos. En base a estas imágenes, es fácil inferir que el sismo fue percibido cerca de las regiones de Aysén y Los Ríos, ya que es en esa zona donde aparecen las primeras publicaciones. También se observa que al transcurrir los minutos, las personas comienzan a publicar mensajes desde zonas más alejadas. Esto se debe a dos razones principales, que la onda del sismo se percibe en diferentes instantes de tiempo dependiendo de la distancia focal y porque la noticia se difunde rápidamente a través de la red social. En este caso en particular, se observan mensajes en Santiago, sin embargo, el sismo fue percibido con muy baja intensidad en la Región Metropolitana, por lo que se infiere que esos \textit{tweets} corresponden a mensajes de difusión y que las personas no se encuentran necesariamente en el radio de percepción del sismo.
+	La geolocalización de \textit{tweets} permitió presentar visualmente la zona en la cual las personas eran capaces de percibir movimiento. Las figuras \ref{fig:heatmap-timelapse} presentan la variación de las visualizaciones geográficas durante los primeros 5 minutos. En base a estas imágenes, es fácil inferir que el sismo fue percibido cerca de las regiones de Aysén y Los Ríos, ya que es en esa zona donde aparecen las primeras publicaciones. También se observa que al transcurrir los minutos, las personas comienzan a publicar mensajes desde zonas más alejadas. Esto se debe a dos razones principales: que la onda del sismo se percibe en diferentes instantes de tiempo dependiendo de la distancia focal y porque la noticia se difunde rápidamente a través de la red social. En este caso en particular, se observan mensajes en Santiago, sin embargo, el sismo fue percibido con muy baja intensidad en la Región Metropolitana, por lo que se infiere que esos \textit{tweets} corresponden a mensajes de difusión y que las personas no se encuentran necesariamente en el radio de percepción del sismo.
 		
 	La información oficial dispuesta por el Centro Sismológico Nacional (CSN) detalla que el epicentro del sismo se encuentra a 67 Km al Noroeste de Melinka, Región de Aysén, a 30 Km de profundidad y que la magnitud del sismo fue de 7,6 Mw. Lo que confirma lo inferido en base a las visualizaciones presentadas en la aplicación. La tabla de la figura \ref{fig:25dic-hipocentro} muestra otros detalles presentados por las fuentes oficiales. 
 	Mientras este reporte fue publicado a pocos segundos del suceso, el informe preparado por la Oficina de Análisis en relación a la {\em intensidad}, es decir, el efecto que el sismo tuvo en la superficie y el alcance que tuvo en los pueblos de la zona, fue publicado a las 12:26 hrs. (4 minutos luego de ocurrido el suceso).
@@ -133,7 +133,7 @@ El terremoto de Chiapas de 2017 ocurrido 04:49:18, del jueves 8 de Septiembre (h
 		\label{fig:timeline-26Oct}
 	\end{figure}
 	
-	La primera detección que se visualiza en la aplicación Web ocurrió a las 10:13 UTC. Al seleccionar el rango de los 5 min posteriores se puede observar las visualización que se presenta en la imagen \ref{fig:sismojapon}. En la imagen se puede identificar que el evento ocurrió en Japón. La baja frecuencia asociada al evento se debe a que la aplicación Web muestra los datos filtrados por idiomas y este filtro no incluye el japonés, por lo que los \textit{tweets} visualizados corresponden únicamente a los escritos en inglés. 
+	La primera detección que se visualiza en la aplicación Web ocurrió a las 10:13 UTC. Al seleccionar el rango de los 5 min posteriores se puede observar la visualización que se presenta en la imagen \ref{fig:sismojapon}. En la imagen se puede identificar que el evento ocurrió en Japón. La baja frecuencia asociada al evento se debe a que la aplicación Web muestra los datos filtrados por idiomas y este filtro no incluye el japonés, por lo que los \textit{tweets} visualizados corresponden únicamente a los escritos en inglés. 
 	
 	\begin{figure}[!h]
 	  \centering
@@ -210,7 +210,7 @@ El terremoto de Chiapas de 2017 ocurrido 04:49:18, del jueves 8 de Septiembre (h
 		\label{fig:timeline-22junio}
 	\end{figure}	
 	
-	Durante el periodo en el que el sistema ha estado disponible se han identificado algunos casos de detecciones falsas. El caso aquí presentado corresponde a un simulacro de sismo ocurrido en Filipinas el año 2016. Este simulacro, al ser de carácter masivo, ocasionó que muchas personas compartieran en la red social comentarios respectivos a su realización más o menos al mismo tiempo, de forma similar a como ocurre durante un evento sísmico real. En la imagen \ref{fig:timeline-22junio}, las dos primeras detecciones de ese día corresponden a falsos positivos. En este caso, la distribución de la frecuencia de \textit{tweets} es diferente a la que se observa durante un sismo real. Al seleccionar el rango de tiempo, se puede ver lo que se muestra en la figura \ref{fig:earthquakedrill}. En esta visualización se observa que los mensajes se geolocalizan en Filipinas por lo que se podría pensar que corresponde a un evento real, sin embargo, al revisar en detalle lo que dicen los mensajes, se menciona ``\textit{earthquake drill}'' lo que en español significa ``simulacro de terremoto''. 
+	Durante el período en el que el sistema ha estado disponible se han identificado algunos casos de detecciones falsas. El caso aquí presentado corresponde a un simulacro de sismo ocurrido en Filipinas el año 2016. Este simulacro, al ser de carácter masivo, ocasionó que muchas personas compartieran en la red social comentarios respectivos a su realización más o menos al mismo tiempo, de forma similar a como ocurre durante un evento sísmico real. En la imagen \ref{fig:timeline-22junio}, las dos primeras detecciones de ese día corresponden a falsos positivos. En este caso, la distribución de la frecuencia de \textit{tweets} es diferente a la que se observa durante un sismo real. Al seleccionar el rango de tiempo, se puede ver lo que se muestra en la figura \ref{fig:earthquakedrill}. En esta visualización se observa que los mensajes se geolocalizan en Filipinas por lo que se podría pensar que corresponde a un evento real, sin embargo, al revisar en detalle lo que dicen los mensajes, se menciona ``\textit{earthquake drill}'' lo que en español significa ``simulacro de terremoto''. 
 	
 	\begin{figure}[h]
 	  \centering
