--- a/05_conclusion.tex
+++ b/05_conclusion.tex
@@ -1,9 +1,6 @@
 \begin{conclusion}
 \label{cap:conclusion}	
 
-\jm{Complementar conclusión con discusión y conclusion de los casos de estudio}
-\jm{Contrastar resultados con los objetivos específicos}
-\jm{Agregar trabajo futuro}
 
 En este trabajo de tesis se desarrollaron un conjunto de actividades cuyo objetivo general era la implementación de un sistema que, utilizando datos obtenidos desde Twitter, detectase la ocurrencia de sismos en tiempo real y visualizase la información útil extraída de los datos.
 
@@ -76,14 +73,17 @@ Además, durante el periodo de desarrollo de esta tesis se aceptó una publicaci
 %
 El artículo aceptado se encuentra disponible en los anexos. 
 %
-Previamente, también se había enviado una versión más corta a la conferencia \textit{The 40th International ACM SIGIR Conference on Research and Development in Information Retrieval} (SIGIR 2017) el cual lamentablemente no fue aceptado debido a que las mejoras del sistema propuesto con respecto al estado del arte no fueron expuestas de forma que los evaluadores las consideraran lo suficientemente relevantes. 
+Previamente, también se había enviado una versión más corta a la conferencia \textit{The 40th International ACM SIGIR Conference on Research and Development in Information Retrieval} (SIGIR 2017) el cual no fue aceptado en forma de artículo corto, pero si fue presentado en una charla por Bárbara Poblete.
 %
-Este primer intento y las revisiones de los evaluadores permitieron preparar una versión más clara y completa.
+Las revisiones de los evaluadores de SIGIR permitieron mejorar la propuesta y preparar una versión más clara y completa para ser enviada a otras conferencias.
 
+\section{Trabajo Futuro}
 
-Cómo se mencionó previamente, la información recolectada hasta la fecha se ha almacenado para estudios y trabajos futuros. Dentro de los posibles estudios a realizar usando los datos de sensores sociales se encuentran: la estimación del tamaño de un sismo, la estimación de la intensidad en diferentes zonas geográficas, la generalización del sistema para su uso en detección de otros tipos de catástrofes naturales que afectan a las ciudades de Chile (erupciones, maremotos, incendios, etc), entre otros.
-
-El enfoque de detección de sismos en base a sensores sociales está limitado por la cobertura geográfica de Twitter y por lo tanto no será posible detectar sismos rápidamente en áreas que no estén habitadas por usuarios de Twitter.
+Entre las opciones de trabajo futuro que se desprenden de la propuesta aquí presentada se encuentran: 
+\begin{itemize}
+\item La generalización del sistema para su uso en detección de otros tipos de catástrofes naturales que afectan a las ciudades de Chile (erupciones, maremotos, incendios, etc). Cada tipo de desastre natural tiene el desafío de identificar la forma en que se reporta el evento, como evoluciona en el tiempo y el estudio del comportamiento de los usuarios. Estas características pueden ser muy diferentes a las de un evento sísmico y por lo tanto no es trivial adaptar el sistema actual a cualquiera de ellos. 
+\item El estudio de los datos recolectados hasta la fecha para intentar estimar el tamaño o la intensidad de un sismo en diferentes zonas geográficas. El desafío principal de un estudio como este surge de la heterogeneidad de los datos, que se debe a múltiples factores, entre ellos, el número de usuarios por sector geográfico.   Además es un trabajo interdiciplinario en el que es importante incorporar el conocimiento proveniente del área de sismología.
+\end{itemize}
 
 \end{conclusion}
 
