--- a/08_anexo.tex
+++ b/08_anexo.tex
@@ -1,3 +1,17 @@
 \chapter*{Anexo III: Menciones en la prensa}
 \label{anexo:prensa}
 
+\begin{itemize}
+\item Noticia en publimetro el 23 de Marzo del 2016. \\
+{\tiny \url{https://www.publimetro.cl/cl/noticias/2016/03/23/chilenos-disenan-plataforma-que-usara-twitter-localizar-epicentro-sismos.html}}
+\item Entrevista a Bárbara Poblete en CNN Chile el 27 de Marzo del 2016.\\ 
+{\tiny \url{http://www.cnnchile.com/noticia/2016/03/27/plataforma-busca-medir-los-sismos-a-traves-de-twitter-en-chile}}
+\item Noticia en Emol el 23 de Marzo del 2016.\\
+{\tiny \url{http://www.emol.com/noticias/Tecnologia/2016/03/23/794547/Usuarios-como-reporteros-Twitter-ayudara-a-detectar-y-localizar-sismos.html}}
+\item Mención de la aplicación Web en una nota de prensa de la Red de Televisión Global China el 14 de Agosto del 2016.\\
+{\tiny \url{https://america.cgtn.com/2016/08/14/chile-leading-the-way-to-decrease-earthquake-devastation}}
+\item Noticia en El Comercio (periódico de Perú) el 24 de Marzo del 2016.\\
+{\tiny \url{https://elcomercio.pe/tecnologia/actualidad/twitter-ayudara-detectar-localizar-sismos-chile-394051}}
+\item Mención de Twicalli en una noticia sobre Big Data en El Mostrador el 10 de Mayo del 2017.\\
+{\tiny \url{http://www.elmostrador.cl/cultura/2017/05/10/big-data-o-cuando-la-tecnologia-ya-no-dio-abasto-para-procesar-la-produccion-de-informacion}}
+\end{itemize}
