--- a/tables/table_zscore.tex
+++ b/tables/table_zscore.tex
@@ -10,6 +10,6 @@
 {2.0}    & {92.3\%}     & {29.0\%}  & {44.2\%}  \\ 
 \bottomrule
 \end{tabular}
-\caption{Algorithm performance using different values for the event alarm threshold $\theta$. }
+\caption{Comportamiento del algoritmo utilizando diferentes valores para el umbral de detecci\'on de sismos $\theta$.}
 \label{table:zscore}
 \end{table}
