--- a/01_teoria.tex
+++ b/01_teoria.tex
@@ -1,7 +1,7 @@
 \chapter{Marco Teórico}
 \label{cap:marco}
 
-En este capítulo se desarrolla el marco teórico que sustenta la base del trabajo expuesto en este documento. En la sección \ref{sec:glosario} se definen los conceptos sismológicos y técnicos que se mencionan a lo largo de este documento y que es necesario manejar para comprender los desafíos y alcances del trabajo realizado. En la sección \ref{sec:metricassis} y \ref{sec:metricasir} se explican brevemente las métricas utilizadas para la medición de sismos y para el análisis de los resultados respectivamente. 
+En este capítulo se desarrolla el marco teórico que sustenta la base del trabajo expuesto en este documento. En la sección \ref{sec:glosario} se definen los conceptos sismológicos y técnicos que se mencionan a lo largo de este documento y que es necesario manejar para comprender los desafíos y alcances del trabajo realizado. En la sección \ref{sec:metricassis} y \ref{sec:metricasir} se explican brevemente las métricas comúnmente utilizadas para la medición de sismos y las utilizadas para el análisis de los resultados del algorimo respectivamente. 
 
 El trabajo desarrollado en esta tesis se relaciona con áreas como detección de eventos usando redes sociales y con el uso de redes sociales en momentos de crisis, en particular durante eventos sísmicos. En relación a estos tópicos hay diversos estudios que demuestran la utilidad de usar los datos proporcionados por las redes de \textit{microblog} como Twitter. En las secciones \ref{sec:deteccioneventos} se mencionan algunos estudios que representan el estado del arte en el uso de redes sociales para la detección de eventos y en la sección \ref{sec:desastres} se mencionan otros estudios relacionados al uso de las redes sociales durante situaciones de crisis. 
 En la sección \ref{sec:deteccionsismos} se profundiza en el estado del arte del uso de redes sociales para la detección y monitoreo de sismos específicamente. Finalmente por completitud, en la sección \ref{sec:otroscasos}, se mencionan algunos casos de estudio en los que se analizaron datos recolectados durante sismos pero cuyo objetivo no es la detección de sismos de forma temprana. 
@@ -34,7 +34,7 @@ En la sección \ref{sec:deteccionsismos} se profundiza en el estado del arte del
 
 \item[Magnitud:] Es una medida que tiene relación con la cantidad de energía liberada en forma de ondas. Se puede considerar como un tamaño relativo de un temblor y se determina tomando el logaritmo (base 10) de la amplitud máxima de movimiento de algún tipo de onda (P, Superficial) a la cual se le aplica una corrección por distancia epicentral y profundidad focal. En oposición a la intensidad, un sismo posee solamente una medida de magnitud y varias observaciones de intensidad.\cite{csnglosary}
 
-\item[Microblog:] Servicio que permite a sus usuarios enviar y publicar cualquier tipo de mensajes breves, que contengan generalmente solo texto.\cite{microbloggingwiki}
+\item[Microblog:] Servicio que permite a sus usuarios enviar y publicar cualquier tipo de mensajes breves, que contengan generalmente sólo texto.\cite{microbloggingwiki}
 
 \item[Réplicas:] Después que se produce un terremoto grande, es posible esperar que ocurran muchos sismos de menor tamaño, en la vecindad de la zona de ruptura asociada al sismo principal. A estos pequeños temblores se les denomina réplicas. Algunas series de réplicas duran largo tiempo, incluso superan el lapso de un año (para los eventos de Alaska 1964, Chile 1960). La zona que cubre los epicentros de las réplicas se llama \textit{área de réplicas} y sus dimensiones, principalmente de las réplicas tempranas (uno a tres días de ocurrido el evento), son una indicación del tamaño de la falla asociada con el terremoto principal.\cite{csnglosary}
 
@@ -42,8 +42,8 @@ En la sección \ref{sec:deteccionsismos} se profundiza en el estado del arte del
 
 \item[Sensor Sísmico:] Sensor utilizado para detectar las vibraciones de la tierra.\cite{csnglosary} Los tipos de sensores sísmicos son:
 	\begin{itemize}
-	\item Sensor de Periodo Corto: Instrumento Sismológico que permite detectar sismos locales.
-	\item Sensor de Periodo Largo: Instrumento Sismológico que permite detectar sismos de origen lejano (distancia mayor a 1000 Km).
+	\item Sensor de Período Corto: Instrumento Sismológico que permite detectar sismos locales.
+	\item Sensor de Período Largo: Instrumento Sismológico que permite detectar sismos de origen lejano (distancia mayor a 1000 Km).
 	\item Sensor de Banda Ancha: Instrumento sismológico que permite registrar sismos en un amplio rango de frecuencias. Esta característica le permite detectar ondas sísmicas producidas tanto por sismos de muy alta frecuencia (70 Hz) hasta períodos del orden de cientos de segundos.
 	\item Acelerómetro: Mide las aceleraciones generadas por un sismo local sobre la superficie de la tierra.
 	\end{itemize}
@@ -62,15 +62,22 @@ En la sección \ref{sec:deteccionsismos} se profundiza en el estado del arte del
 
 \item[Magnitud de Momento (MW):] Es una escala logarítimica utilizada para la comparación de sismos. Esta fue concebida para ser utilizada con sismos mas grandes, en donde la fórmula de Richter no logra dimensionar el tamaño correctamente. Fue introducida en 1979 por Thomas C. Hanks y Hiroo Kanamori como la sucesora de la escala sismológica de Richter.\cite{csnglosary}
 
-\item[Escala de Mercalli Modificada:] Es una escala de doce grados que mide la intensidad registrada en un lugar específico. Para un mismo temblor habitualmente se reportan varias intensidades las en general decrecen a medida que la distancia epicentral aumenta.\cite{csnglosary}
+\item[Escala de Mercalli Modificada:] Es una escala de doce grados que mide la intensidad registrada en un lugar específico. Para un mismo temblor habitualmente se reportan varias intensidades las que en general decrecen a medida que la distancia epicentral aumenta.\cite{csnglosary}
 \end{description}
 
 \section{Métricas de \textit{Information Retrieval}}
 \label{sec:metricasir}
 
-Las definiciones breves listadas a continuación fueron obtenidas del libro \textit{Encyclopedia of Machine Learning}\cite{encyclopediaml}.
+Las definiciones listadas a continuación fueron obtenidas del libro \textit{Encyclopedia of Machine Learning}\cite{encyclopediaml}.
 
 \begin{description}
+
+\item[TP:] \textit{True Positive}. Detecciones de sismos correctamente efectuadas.
+
+\item[FP:] \textit{False Positive}. Detecciones de sismos incorrectamente efectuadas.
+
+\item[FN:] \textit{False Negative}. Detecciones no efectuadas, es decir, sismos no detectados. 
+
 \item[Recall:] También se conoce como exhaustividad o sensibilidad. Corresponde a la cantidad de detecciones correctamente efectuadas sobre el total de sismos del catálogo. La formula utilizada para el cálculo de esta métrica es:  
 \[recall = \frac{TP}{TP + FN}\]
 
@@ -91,7 +98,7 @@ Algunos de ellos requieren que periódicamente se reajusten parámetros. Este es
 %
 Otros requieren entrenamiento periódico, como ocurre con la propuesta de Sankaranarayanan et al.~ \cite{sankaranarayanan2009twitterstand}. 
 %
-También los hay que tienen una alta complejidad en términos de espacio y tiempo, como el trabajo de Petrovic et al.~\cite{petrovic2010streaming}.
+También hay algunos que tienen una alta complejidad en términos de espacio y tiempo, como el trabajo de Petrovic et al.~\cite{petrovic2010streaming}.
 %
 Entre ellos se encuentra el trabajo desarrollado por Guzmán y Poblete~\cite{guzman2013line}, que propone un enfoque más liviano en términos de complejidad y que requiere baja supervisión.
 %
@@ -115,7 +122,7 @@ En el capítulo \ref{cap:deteccion} se detalla la adaptación realizada a la sol
 
 %Diversos estudios se han enfocado en el uso del crowdsourcing y de las redes sociales durante eventos de crisis para ayudar a entender lo que sucede y mejorar los tiempos de respuesta. 
 
-Existen varias propuestas basadas en el \textit{crowdsourcing} para obtener información durante eventos de crisis y así identificar a las personas o lugares más afectados para luego prestar la ayuda necesaria de forma más eficiente. 
+Existen varias propuestas basadas en el \textit{crowdsourcing} para obtener información durante eventos de crisis y así identificar los lugares más afectados y prestar la ayuda necesaria de forma más eficiente. 
 %
 Algunos ejemplos son: \textit{Ushahidi}, plataforma colaborativa presentada por O. Okolloh\cite{okolloh2009ushahidi} que crea un mapa de crisis; \textit{Sahana}, sistema Web de administración de desastres presentado por Samaraweera et. al.\cite{samaraweera2007sahana} que permite la coordinación de búsqueda de personas desaparecidas, seguimiento de víctimas, campamentos y voluntarios: y \textit{Person Finder}, aplicación Web desarrollada por Google que permite enviar formulario sobre personas desaparecidas para ayudar a la búsqueda de estas mismas\cite{PersonFinder}. 
 
@@ -129,7 +136,7 @@ Otro trabajo con un objetivo similar es de Marcus et. al.\cite{marcus2011twitinf
 %
 También se puede mencionar el trabajo de Imran et. al. \cite{imran2014aidr} en el que se presenta AIDR (Artificial Intelligence for Disaster Response). Esta herramienta genera una instancia Web que permite recolectar mensajes de Twitter bajo ciertas palabras claves y geolocalización, la cual a su vez dispone de un clasificador que debe ser entrenado para distinguir entre distintas categorías pre-definidas por la aplicación.
 
-También se han presentado otras soluciones enfocadas en la detección de eventos, como {\em Twitris V3}\cite{purohit2013twitris}, propuesto por Purohit y Sheth, que hace un uso de un conjunto de palabras configuradas previamente para detectar un evento y generar análisis espacio-temporal, de contenido de personas y sentimientos. Finalmente, hay trabajos enfocados en la estimación de daño, como el trabajo expuesto por Ashktorab et. al. \textit{Tweedr}\cite{ashktorab2014tweedr}, en el que se enfoca principalmente en métodos de clasificación y clustering para generar filtros que origen reportes de daños existentes en un suceso pero no los identifica automáticamente.
+También se han presentado otras soluciones enfocadas en la detección de eventos, como {\em Twitris V3}\cite{purohit2013twitris}, propuesto por Purohit y Sheth, que hace uso de un conjunto de palabras configuradas previamente para detectar un evento y generar análisis espacio-temporal, de contenido de personas y sentimientos. Finalmente, hay trabajos enfocados en la estimación de daño, como el trabajo presentado por Ashktorab et. al. \textit{Tweedr}\cite{ashktorab2014tweedr}, en el que se enfoca principalmente en métodos de clasificación y clustering, y a partir de filtros preestablecidos genera reportes de daños en un suceso, pero que no son identificados automáticamente.
 
 \section{Detección de sismos usando Twitter}
 \label{sec:deteccionsismos}
@@ -142,7 +149,7 @@ En particular, hay dos enfoques principales para abordar la detección de sismos
 \subsection{Modelos Probabilísticos Temporales}
 \label{sec:modelosprob}
 
-El trabajo de Sakaki et al. \cite{sakaki2013tweet,sakaki2010earthquake} (quien extendió el trabajo de Okazaki et al. \cite{okazaki2010semantic}), y el trabajo de investigadores de CSIRO Australia \cite{yin2012using,robinson2013sensitive} utilizan modelos probabilísticos temporales para la detección de sismos. 
+El trabajo de Sakaki et al. \cite{sakaki2013tweet,sakaki2010earthquake} (quien extiende el trabajo de Okazaki et al. \cite{okazaki2010semantic}), y el trabajo de investigadores de CSIRO Australia \cite{yin2012using,robinson2013sensitive} utilizan modelos probabilísticos temporales para la detección de sismos. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Sakaki et al. Research
@@ -151,15 +158,15 @@ Sakaki et al. \cite{sakaki2013tweet}  presenta un modelo temporal, basado en una
 %
 Su sistema, el cual es específico para Japón, extrae mensajes usando la API de búsqueda de Twitter y filtra los mensajes relevantes usando palabras clave relacionadas con sismos. 
 %
-Este mecanismo para extraer los mensajes tiene como desventaja una restricción impuesta por las normas de Twitter que limita la cantidad de consultas que es posible realizar por minuto.
+Este mecanismo para extraer los mensajes tiene como desventaja una restricción impuesta por las normas de Twitter\footnote{https://developer.twitter.com/en/developer-terms} que limita la cantidad de consultas que es posible realizar por minuto.
 %
 Los mensajes son procesados por su sistema usando un clasificador SVN que descarta los mensajes menos relevantes. 
 %
 Para entrenar el clasificador es necesario etiquetar un conjunto de datos suficientemente grande indicando para cada {\em tweet} si es relevante o no.
 %
 Para localizar los mensajes utilizan, si es que está disponible, la información GPS asociada al {\em tweet} o la localidad asociada al perfil del usuario que publica el {\em tweet}. 
-%
-Ellos validan el sistema cuantitativamente usando un conjunto de reportes oficiales de sismos de la Agencia Meteorológica de Japón (JMA).
+
+Sakaki et al. validan el sistema cuantitativamente usando un conjunto de reportes oficiales de sismos de la Agencia Meteorológica de Japón (JMA).
 %
 Los reportes oficiales están medidos en una escala de intensidad que mide niveles de percepción, por lo tanto, el análisis considera únicamente sismos perceptibles.
 %
@@ -186,9 +193,9 @@ Esta evaluación muestra que el sistema tiene una precisión de $0.85$, {\em rec
 Aunque hay una versión de ESA~\footnote{\url{https://esa.csiro.au/ausnz/index.html}}, la solución no está disponible actualmente para otras regiones geográficas. 
 
 
-Los enfoques basados en modelos probabilísticos requieren un periodo inicial de entrenamiento para estimar la probabilidad de distribución de los datos de entrada.
+Los enfoques basados en modelos probabilísticos requieren un período inicial de entrenamiento para estimar la probabilidad de distribución de los datos de entrada.
 %
-Este periodo de entrenamiento debe ser realizado de forma off-line y por lo tanto no se adapta dinámicamente a cambios en el flujo de datos de entrada. 
+Este período de entrenamiento debe ser realizado de forma off-line y por lo tanto no se adapta dinámicamente a cambios en el flujo de datos de entrada. 
 %
 Es necesario además ajustar ciertos parámetros para reducir las falsas alarmas. 
 
@@ -198,11 +205,9 @@ Es necesario además ajustar ciertos parámetros para reducir las falsas alarmas
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Earle et al. Research
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-El algoritmo STA/LDA es usado en sismología para detectar y medir fases sísmicas. 
+El trabajo de Earl et al.~\cite{earle2012twitter} utiliza un enfoque que se basa en el algoritmo STA/LDA, el cual es usado en sismología para detectar y medir fases sísmicas. 
 %
-El trabajo de Earl et al.~\cite{earle2012twitter} usa este enfoque. 
-%
-Ellos recolectan datos usando la API de búsqueda de Twitter. 
+Ellos recolectan datos usando la API de búsqueda de Twitter en base a un conjunto de palabras clave.
 %
 Aunque al reportar sus resultados no detallan el número de sismos que son capaces de detectar usando reportes oficiales, si muestran de forma general el comportamiento de su sistema al modificar ciertos parámetros. 
 %
@@ -244,7 +249,7 @@ Es por esto que este tipo de enfoque elimina mensajes potencialmente relevantes 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Discussion
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-La restricciones basadas en filtros y clasificadores, que limitan la entrada de estos sistemas solo a mensajes muy relevantes, les permiten tener buena precisión para la detección. 
+La restricciones basadas en filtros y clasificadores, que limitan la entrada de estos sistemas sólo a mensajes muy relevantes, les permiten tener buena precisión para la detección. 
 %
 Sin embargo, el \textit{recall} se ve disminuido en la detección de eventos de bajo impacto. 
 %
